--- a/src/app/open-issue/open-issue.component.html
+++ b/src/app/open-issue/open-issue.component.html
@@ -2,7 +2,7 @@
     <ul>
         <li>
             <h3>Open Title</h3>
-            <p>Comment</p>
+            <p>Commenttt</p>
         </li>
         <li>
             <h3>Title</h3>
