--- a/src/app/open-issue/open-issue.component.html
+++ b/src/app/open-issue/open-issue.component.html
@@ -6,7 +6,7 @@
         </li>
         <li>
             <h3>Title</h3>
-            <p>Comment</p>
+            <p>Commenttt</p>
         </li>
         <li>
             <h3>Title</h3>
