--- a/src/app/open-issue/open-issue.component.html
+++ b/src/app/open-issue/open-issue.component.html
@@ -10,7 +10,7 @@
         </li>
         <li>
             <h3>Title</h3>
-            <p>Comment</p>
+            <p>Commenttt</p>
         </li>
     </ul>
 </div>
