--- a/src/app/open-issue/open-issue.component.html
+++ b/src/app/open-issue/open-issue.component.html
@@ -2,15 +2,15 @@
     <ul>
         <li>
             <h3>Open Title</h3>
-            <p>Commenttt</p>
+            <p>Comment</p>
         </li>
         <li>
             <h3>Title</h3>
-            <p>Commentt</p>
+            <p>Comment</p>
         </li>
         <li>
             <h3>Title</h3>
-            <p>Commenttt</p>
+            <p>Comment</p>
         </li>
     </ul>
 </div>
