--- a/src/app/closed-issue/closed-issue.component.html
+++ b/src/app/closed-issue/closed-issue.component.html
@@ -1,16 +1,8 @@
-<div>
+<div class="box">
     <ul>
-        <li>
-            <h3>Closed Title</h3>
-            <p>Comment</p>
-        </li>
-        <li>
-            <h3>Title</h3>
-            <p>Comment</p>
-        </li>
-        <li>
-            <h3>Title</h3>
-            <p>Comment</p>
+        <li *ngFor="let news of NewsApi" class="list">
+            <h3 class="title">Title: {{news.source.name}}</h3>
+            <p class="content">{{news.description}}</p>
         </li>
     </ul>
 </div>
