画面サンプル#2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <h1 class="title">GitHub Issues</h1>
 
-<div class="btn">
-  <button type="button" class="open">
+<div class="btn-box">
+  <button type="button" class="btn open">
     <a routerLink="open">Open Issues</a>
   </button>
-  <button type="button" class="closed">
+  <button type="button" class="btn closed">
     <a routerLink="closed">Closed Issues</a>
   </button>
-  <button type="button" class="new">New Issues</button>
+  <button type="button" class="btn new">New Issues</button>
 </div>
 
 <router-outlet></router-outlet>
