--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,6 +3,10 @@ h1 {
   }
   
   .btn {
+    margin: 0 50px;
+  }
+
+  .btn-box {
     padding: 0;
     margin: auto;
     max-width: 1000px;
@@ -11,7 +15,7 @@ h1 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
     align-content: flex-start;
     align-items: flex-start;
   }
