--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,9 @@
   <button type="button" class="btn closed">
     <a routerLink="closed">Closed Issues</a>
   </button>
-  <button type="button" class="btn new">New Issues</button>
+  <button type="button" class="btn new">
+    <a routerLink="new">New Issues</a>
+  </button>
 </div>
 
 <router-outlet></router-outlet>
