--- a/src/app/open-issue/open-issue.component.html
+++ b/src/app/open-issue/open-issue.component.html
@@ -1,9 +1,9 @@
 <div class="box">
     <ul>
-        <li *ngFor="let news of NewsApi" class="list">
+        <li *ngFor="let news of IssueApi" class="list">
             <div class="issue">
                 <h3 class="title">Title: {{news.title}}</h3>
-                <p class="content">{{news.content}}</p>
+                <p class="content">{{news.body}}</p>
             </div>
             <button type="button" class="btn">Complete</button>
         </li>
