--- a/src/app/open-issue/open-issue.component.html
+++ b/src/app/open-issue/open-issue.component.html
@@ -6,7 +6,7 @@
                 <h3 class="title" id="number">{{news.number}}Title: {{news.title}}</h3>
                 <p class="content">{{news.body}}</p>
             </div>
-            <button type="button" class="btn" (click)="closeApi()">Complete</button>
+            <button type="button" class="btn" (click)="closeApi(news)">Complete</button>
         </li>
     </ul>
 </div>
