--- a/src/app/open-issue/open-issue.component.html
+++ b/src/app/open-issue/open-issue.component.html
@@ -9,4 +9,8 @@
             <button type="button" class="btn" (click)="closeApi(news)">Complete</button>
         </li>
     </ul>
+    <div id="loading" class="loading" [style.visibility]="loading">
+        <div class="load-text">Loading...</div>
+    </div>
 </div>
+
