--- a/src/app/closed-issue/closed-issue.component.html
+++ b/src/app/closed-issue/closed-issue.component.html
@@ -7,6 +7,8 @@
                 <p class="content">{{news.body}}</p>
             </div>
         </li>
-
+        <div id="loading" class="loading" [style.visibility]="loading">
+            <div class="load-text">Loading...</div>
+        </div>
     </ul>
 </div>
