--- a/src/app/new-issue/new-issue.component.css
+++ b/src/app/new-issue/new-issue.component.css
@@ -1,4 +1,34 @@
 .issue-box{
-    text-align: center;
+    margin: 50px;
+    padding: 30px 30px 80px;
+    box-shadow: 0 1rem 2rem hsl(0 0% 0% / 20%);
+    border-radius: 30px;
 }
 
+p{
+    font-weight: 600;
+    font-size: 16px;
+}
+
+input{
+    border-bottom: 1px solid rgb(70, 65, 62);
+}
+
+.error-message{
+    margin-top: 2px;
+    font-size: 14px;
+    color: rgba(212, 71, 14, 0.925);
+}
+
+.submit-btn{
+    float: right;
+    width: 140px;
+    height: 45px;
+    font-size: 14px;
+    font-weight: 600;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+}
