--- a/src/app/new-issue/new-issue.component.html
+++ b/src/app/new-issue/new-issue.component.html
@@ -1,18 +1,16 @@
 <div class="issue-box">
-    <h2>New Issues</h2>
     <form method="post" action="#" class="issue-content" [formGroup]="registrationForm">
         <p>Title</p>
         <input type="text" id="title" [formControl]="title">
-        <span *ngIf="title.errors?.['required']">
-            Titleは必須項目です。
-          </span>
+        <div class="error-message" *ngIf="title.errors?.['required']">
+            *Titleは必須項目です。
+        </div>
         <p>Comment</p>
         <input type="text" id="comment" [formControl]="comment">
-        <span *ngIf="comment.errors?.['required']">
-            Commentは必須項目です。
-          </span>
+        <div class="error-message" *ngIf="comment.errors?.['required']">
+            *Commentは必須項目です。
+        </div>
     </form>
-    <button type="submit" (click)="post()" [disabled]="registrationForm.invalid">New Issues</button>
-    <br>
-    <button type="submit" (click)="resetToken()">Reset Token</button>
+    <button class="submit-btn" type="submit" (click)="post()" [disabled]="registrationForm.invalid">New Issues</button>
+    
 </div>
