--- a/src/app/open-issue/open-issue.component.html
+++ b/src/app/open-issue/open-issue.component.html
@@ -1,12 +1,14 @@
 <div class="box">
     <ul>
-        <button type="submit" (click)="getOpenApi()">Get Open Issues</button>
         <li *ngFor="let news of IssueApi" class="list">
+            <span class="sub-logo"><svg class="octicon octicon-issue-opened open" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path d="M8 9.5a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"></path><path fill-rule="evenodd" d="M8 0a8 8 0 100 16A8 8 0 008 0zM1.5 8a6.5 6.5 0 1113 0 6.5 6.5 0 01-13 0z"></path></svg></span>
             <div class="issue">
-                <h3 class="title" id="number">{{news.number}}Title: {{news.title}}</h3>
-                <p class="content">{{news.body}}</p>
+                <h3 class="title" id="number">{{news.title}}</h3>
+                <p class="comment">{{news.body}}</p>
             </div>
-            <button type="button" class="btn" (click)="closeApi(news)">Complete</button>
+            <div class="check">
+                <input type="checkbox" name="check" (click)="closeApi(news)">
+            </div>
         </li>
     </ul>
     <div id="loading" class="loading" [style.visibility]="loading">
